SERVER-130955 Zero-initialize _numMonitorsCreated (#60205)

GitOrigin-RevId: 37f3e83a6090a870be1116c65dab0c596cc3dfed